# reactivate-playground

./: README.md  package-lock.json  package.json  pyproject.toml
client/templates/: DjangoDefault.tsx
server/: urls.py
server/example/: templates.py  views.py
server/settings/: common.py
