[tool.poetry]
name = "reactivate-playground"
version = "0.1.0"
description = ""
authors = ["Josef Rousek <josef.rousek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
reactivated = "^0.22.0"
django-stubs-ext = "^0.3.1"
mypy-extensions = "^0.4.3"
simplejson = "^3.17.6"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
